--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,18 +2,6 @@ import pandas as pd
 
 configfile: 'config/chip_seq.yaml'
 
-#TF_EXPERIMENT = {}
-#for genome in config['Genome']:
-    #print(genome)
-    # input/output
-    #infile=f'resources/wiggletools mean_v3_{genome}_TFs_only.tab'
-    # get tf:experiment dictionary
-    #experiment_tf = pd.read_csv(infile,sep='\t',usecols=[0,3],index_col=0)
-    #experiment_tf.index = [f'resources/tracks/{genome}/{x}.bw' for x in experiment_tf.index]
-#    TF_EXPERIMENT[genome] = experiment_tf.groupby('Antigen').groups
-#    for tf in TF_EXPERIMENT[genome]:
-        #TF_EXPERIMENT[genome][tf] = list(TF_EXPERIMENT[genome][tf])
-
 def get_chip_table(genome):
     infile=f"resources/experimentList_v3_{genome}_TFs_only_QC_filtered.tab"
     experiment_tf = pd.read_csv(infile,sep='\t',usecols=[0,3])
@@ -37,14 +25,7 @@ def get_experiments_bb(wildcards):
 
 def get_tfs(genome):
     experiment_tf = get_chip_table(genome)
-
     return list(experiment_tf.antigen.unique())
-
-def get_tfs_st_exp_gt1(genome):
-    experiment_tf = get_chip_table(genome)
-    experiment_tf.loc[:,'N'] = [(experiment_tf.antigen==tf).sum() for tf in experiment_tf.antigen]
-
-    return list(experiment_tf.loc[experiment_tf.N>1,:].antigen.unique())
 
 def get_all_svd_files(wildcards):
     TFs = get_tfs(wildcards.genome)
@@ -73,22 +54,22 @@ rule all:
         #expand('results/hg38/TF_mean_chip_prom_pm{window_kb}kb/{tf}.wig', window_kb=config['Window_kb'], tf=get_tfs('hg38') ),
         #expand('results/hg38/Summed_TF_chip_prom_pm{window_kb}kb.bw', window_kb=config['Window_kb']),
         #
+        #
         #expand('results/mm10/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10') ),
-        #expand('results/hg38/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38') ),
+        expand('results/hg38/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38') ),
         #expand('results/mm10/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('mm10') ),
         #expand('results/hg38/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('hg38') ),
         #expand('track_hubs/{file}',file=config['Track_hub']['outfiles']),
-        expand('results/{genome}/Peak_tensors/Window_pm{window_kb}kb/Sparse_peak_tensor_prom_tf_position.pt', window_kb=config['Window_kb'], genome=config['Genome']),
-        #
-        #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
-        #expand('results/fig/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
+        #expand('results/{genome}/Peak_tensors/Window_pm{window_kb}kb/Sparse_peak_tensor_prom_tf_position.pt', window_kb=config['Window_kb'], genome=config['Genome']),
         #
         #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10')),
+        #expand('results/hg38/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38')),
         #expand('results/fig/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10')),
-        #expand('results/fig/hg38/Window_pm{window_kb}kb_bin_size_{bin_size}/svd/{tf}.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs_st_exp_gt1('hg38')),
+        #expand('results/fig/hg38/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38')),
         #
         #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TF_mode_pos_prom.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
         #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TFsvd1_pos_prom.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
+        #expand('results/hg38/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TFsvd1_pos_prom.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
         #expand('results/fig/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/mean_chip_signal_per_promoter_per_tf.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
         #
         #expand('results/{genome}/TF_Complex.tsv',genome=['mm10','hg38'])
@@ -163,6 +144,7 @@ rule sum_TF_chip:
 
 rule make_chip_tensors:
     input:
+        promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered_clustered_sorted.bed",
         infile="resources/experimentList_v3_{genome}_TFs_only_QC_filtered.tab",# Dependence: used in get_experiments_bw
         exp_list=get_experiments_bw
     output:
@@ -170,7 +152,14 @@ rule make_chip_tensors:
     threads: 20
     shell:
         """
-        python scripts/make_chip_promoter_experiment_tensors.py --threads {threads} --tf {wildcards.tf} --genome {wildcards.genome} --window_kb {wildcards.window_kb} --bin_size {wildcards.bin_size} --outfile {output.tensor} --infiles_tf {input.exp_list}
+        python scripts/make_chip_promoter_experiment_tensors.py --promoterome {input.promoterome} \
+                                                                --threads {threads} \
+                                                                --tf {wildcards.tf} \
+                                                                --genome {wildcards.genome} \
+                                                                --window_kb {wildcards.window_kb} \
+                                                                --bin_size {wildcards.bin_size} \
+                                                                --outfile {output.tensor} \
+                                                                --infiles_tf {input.exp_list}
         """
 
 rule make_peak_tensors:
