--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -56,14 +56,14 @@ rule all:
         #
         #
         #expand('results/mm10/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10') ),
-        expand('results/hg38/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38') ),
+        #expand('results/hg38/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38') ),
         #expand('results/mm10/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('mm10') ),
         #expand('results/hg38/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('hg38') ),
         #expand('track_hubs/{file}',file=config['Track_hub']['outfiles']),
         #expand('results/{genome}/Peak_tensors/Window_pm{window_kb}kb/Sparse_peak_tensor_prom_tf_position.pt', window_kb=config['Window_kb'], genome=config['Genome']),
         #expand('results/{genome}/regulatory_regions_pm{window_kb}kb.bed', window_kb=config['Window_kb']),
         #expand('results/{genome}/regulatory_regions_pm{window_kb}kb.npy', window_kb=config['Window_kb']),
-        #expand('results/{genome}/N_sf_pm{window_kb}kb.npy', window_kb=config['Window_kb'], genome=config['Genome']),
+        expand('results/{genome}/N_sf_pm{window_kb}kb.npy', window_kb=config['Window_kb'], genome=config['Genome']),
         expand('results/{genome}/N_sm_pm{window_kb}kb.npy', window_kb=config['Window_kb'], genome=config['Genome']),
         #
         #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
@@ -137,6 +137,7 @@ rule sum_TF_chip:
         """
 
 # get regulatory regions
+
 rule make_WholePeak_prom_tf_pos_sparse_tensor:
     input:
         chip_experiment_table="resources/experimentList_v3_{genome}_TFs_only_QC_filtered.tab",
@@ -150,6 +151,7 @@ rule make_WholePeak_prom_tf_pos_sparse_tensor:
                                                               --infile_promoterome {input.promoterome} \
                                                               --outfile {output.tensor} \
                                                               --window_kb {wildcards.window_kb} \
+                                                              --genome {wildcards.genome} \
                                                               --threads {threads} \
         """
 
@@ -166,6 +168,7 @@ rule make_PeakCenter_prom_tf_pos_sparse_tensor:
                                                               --infile_promoterome {input.promoterome} \
                                                               --outfile {output.tensor} \
                                                               --window_kb {wildcards.window_kb} \
+                                                              --genome {wildcards.genome} \
                                                               --threads {threads} \
                                                               --peak_center_only
         """
@@ -218,16 +221,8 @@ rule get_N_sm:
                                    --out_matrix {output.matrix}
         """
 
-#    input:
-#        sum_bw='results/{genome}/Summed_TF_chip_prom_pm{window_kb}kb.bw'
-#        promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered.bed"
-#    output:
-#        peaks='results/{genome}/Summed_TF_chip_prom_pm{window_kb}kb_peaks.bed
-#    shell:
-#        """
-#        python scripts/call_peaks.py --infile_sum_bw {input.sum_bw} --infile_promoterome {input.promoterome} --outfile {output.peaks}
-#        """
 
+# Chip rules
 
 rule make_chip_tensors:
     input:
@@ -271,7 +266,6 @@ rule make_peak_table:
         """
         python scripts/make_peak_tables.py --genome {wildcards.genome} --promoterome {params.promoterome} --out_file {output.table}
         """
-
 
 rule svd:
     input:
