--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -60,14 +60,11 @@ rule all:
         #expand('results/mm10/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('mm10') ),
         #expand('results/hg38/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('hg38') ),
         #expand('track_hubs/{file}',file=config['Track_hub']['outfiles']),
-        #expand('results/{genome}/Peak_tensors/Window_pm{window_kb}kb/Sparse_peak_tensor_prom_tf_position.pt', window_kb=config['Window_kb'], genome=config['Genome']),
-        #expand('results/{genome}/regulatory_regions_pm{window_kb}kb.bed', window_kb=config['Window_kb']),
-        #expand('results/{genome}/regulatory_regions_pm{window_kb}kb.npy', window_kb=config['Window_kb']),
+        #expand('results/{genome}/Peak_tensors/Window_pm{window_kb}kb/PeakCenter_sparse_tensor_prom_tf_position.pt', window_kb=config['Window_kb'], genome=config['Genome']),
+        expand('results/{genome}/regulatory_regions_pm{window_kb}kb.bed', window_kb=config['Window_kb'], genome=config['Genome']),
+        expand('results/{genome}/regulatory_regions_pm{window_kb}kb.npy', window_kb=config['Window_kb'], genome=config['Genome']),
         expand('results/{genome}/N_sf_pm{window_kb}kb.npy', window_kb=config['Window_kb'], genome=config['Genome']),
         expand('results/{genome}/N_sm_pm{window_kb}kb.npy', window_kb=config['Window_kb'], genome=config['Genome']),
-        #
-        #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
-        #expand('results/fig/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
         #
         #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10')),
         #expand('results/hg38/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38')),
@@ -75,8 +72,7 @@ rule all:
         #expand('results/fig/hg38/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38')),
         #
         #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TF_mode_pos_prom.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
-        #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TFsvd1_pos_prom.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
-        #expand('results/hg38/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TFsvd1_pos_prom.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
+        expand('results/{genome}/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TFsvd1_pos_prom.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], genome=config['Genome']),
         #expand('results/fig/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/mean_chip_signal_per_promoter_per_tf.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
         #
         #expand('results/{genome}/TF_Complex.tsv',genome=['mm10','hg38'])
@@ -222,7 +218,7 @@ rule get_N_sm:
         """
 
 
-# Chip rules
+# Chip tensor TFsvd1 x pos x prom
 
 rule make_chip_tensors:
     input:
@@ -246,26 +242,32 @@ rule make_chip_tensors:
 
 rule make_peak_tensors:
     input:
+        promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered_clustered_sorted.bed",
         infile="resources/experimentList_v3_{genome}_TFs_only_QC_filtered.tab",# Dependence: used in get_experiments_bb
         exp_list=get_experiments_bb
     output:
         tensor='results/{genome}/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5'
     shell:
         """
-        python scripts/make_peak_promoter_experiment_tensors.py --tf {wildcards.tf} --genome {wildcards.genome} --window_kb {wildcards.window_kb} --outfile {output.tensor} --infiles_tf {input.exp_list}
+        python scripts/make_peak_promoter_experiment_tensors.py --promoterome {input.promoterome} \
+                                                                --tf {wildcards.tf} \
+                                                                --genome {wildcards.genome} \
+                                                                --window_kb {wildcards.window_kb} \
+                                                                --outfile {output.tensor} \
+                                                                --infiles_tf {input.exp_list}
         """
 
-rule make_peak_table:
-    input:
-        infile="resources/experimentList_v3_{genome}_TFs_only_QC_filtered.tab",
-    output:
-        table="results/{genome}/peak_table_pm{window_kb}kb.txt"
-    params:
-        promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered.bed"
-    shell:
-        """
-        python scripts/make_peak_tables.py --genome {wildcards.genome} --promoterome {params.promoterome} --out_file {output.table}
-        """
+#rule make_peak_table:
+#    input:
+#        infile="resources/experimentList_v3_{genome}_TFs_only_QC_filtered.tab",
+#    output:
+#        table="results/{genome}/peak_table_pm{window_kb}kb.txt"
+#    params:
+#        promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered.bed"
+#    shell:
+#        """
+#        python scripts/make_peak_tables.py --genome {wildcards.genome} --promoterome {params.promoterome} --out_file {output.table}
+#        """
 
 rule svd:
     input:
@@ -306,7 +308,7 @@ rule make_track_hubs:
 rule get_chip_1st_comp:
     input:
         svd_files=get_all_svd_files, # all svd files for dependence
-        promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered.bed"
+        promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered_clustered_sorted.bed"
     output:
         tensor_tf_pos_prom='results/{genome}/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TFsvd1_pos_prom.hdf5',
         #fig='results/fig/{genome}/mean_chip_signal_per_promoter_per_tf.pdf'
